--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
-/* #!SECTION */
+/* !SECTION */
 
 /* #SECTION Navbar styling and media queries */
 
@@ -32,7 +32,7 @@ a.nav-link {
   border-radius: 15px;
 }
 
-/* #!SECTION */
+/* !SECTION */
 
 /* #SECTION Hero section styling and media queries */
 
@@ -74,7 +74,7 @@ a.nav-link {
   }
 }
 
-/* #!SECTION */
+/* !SECTION */
 
 /* #SECTION About and Specials section */
 .carousel-caption {
@@ -83,4 +83,39 @@ a.nav-link {
   left: 0;
   top: 0;
 }
-/* #!SECTION */
+/* !SECTION */
+
+/* #SECTION Order now section */
+.order-now {
+  background-image: linear-gradient(
+      to bottom right,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url("assets/img/ordernow-bg.jpg");
+  height: 30vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.order-now-text {
+  position: absolute;
+  top: 35%;
+  left: 23%;
+  transform: translate(-30%, -50%);
+}
+
+.order-now-text h2:nth-of-type(2) {
+  margin-top: -4%;
+}
+
+.order-btn {
+  position: absolute;
+  top: 60%;
+  left: 23%;
+  transform: translate(-30%, 0%);
+  background-color: #a30001;
+}
+/* !SECTION */
