--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a.nav-link {
   color: #f6f6f6;
 }
 
-.navbar-nav li:nth-of-type(3) {
+.nav-order-btn {
   background-color: #a30001;
   border-radius: 15px;
 }
@@ -117,5 +117,15 @@ a.nav-link {
   left: 23%;
   transform: translate(-30%, 0%);
   background-color: #a30001;
+}
+/* !SECTION */
+
+/* #SECTION Contact/Social */
+.contact-btn {
+  background-color: #a30001;
+}
+
+.social-links a {
+  color: #000;
 }
 /* !SECTION */
