--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ body {
   font-family: "Caveat", cursive;
 }
 
+.navbar span:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
 .navbar a.nav-link {
   color: #fff;
 }
@@ -86,7 +91,7 @@ body {
 /* !SECTION */
 
 /* #SECTION Order now section */
-.order-now {
+.order-now-banner {
   background-image: linear-gradient(
       to bottom right,
       rgba(0, 0, 0, 0.5),
